[package]
name = "coke_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
bincode = "1.3.3"
serde = "~1.0.126"
serde_derive = "~1.0.126"
futures = "~0.3.15"
futures-util = "~0.3.15"
tokio = { version = "1.6.2", features = ["full"] }
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-stream = { version = "0.1.6", features = ["net"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
log = "0.4.7"
simple_logger = "4.1.0"
simplelog = "0.10.2"
clap = { version = "4.1.8", features = ["derive"] }

rustyline = { version = "11.0.0" }
rustyline-derive = "0.8.0"

config = "~0.13.3"
